# fastapi-tdd

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  tox.ini
alembic/: env.py
alembic/versions/: 1ae1d0bb6418_add_account_table.py  5b0451b2c170_add_is_verified_field.py
docs/: api_summary.rst  conf.py  index.rst
docs/_generated_api_stubs/: src.constants.errors.rst  src.constants.logging.rst  src.constants.rst  src.constants.token.rst  src.controllers.account.rst  src.controllers.auth.rst  src.controllers.rst  src.core.config.rst  src.core.logging.rst  src.core.rst  src.core.security.rst  src.db.redis.rst  src.db.rst  src.db.session.rst  src.dependencies.auth.rst  src.dependencies.rst  src.models.account.rst  src.models.mixin.rst  src.models.rst  src.repositories.account.rst  src.repositories.base.rst  src.repositories.rst  src.rst  src.schemas.account.rst  src.schemas.auth.rst  src.schemas.common.rst  src.schemas.exceptions.rst  src.schemas.response.rst  src.schemas.rst  src.services.account.rst  src.services.auth.rst  src.services.rst  src.utils.blacklist.rst  src.utils.exceptions.rst  src.utils.mails.rst  src.utils.rst
src/: __init__.py  main.py
src/constants/: __init__.py  errors.py  logging.py  token.py
src/controllers/: __init__.py  account.py  auth.py
src/core/: __init__.py  config.py  logging.py  security.py
src/db/: __init__.py  redis.py  session.py
src/dependencies/: __init__.py  auth.py
src/models/: __init__.py  account.py  mixin.py
src/repositories/: __init__.py  account.py  base.py
src/schemas/: __init__.py  account.py  auth.py  common.py  exceptions.py  response.py
src/services/: __init__.py  account.py  auth.py
src/templates/: account_verification.html
src/utils/: __init__.py  blacklist.py  exceptions.py  mails.py
tests/: .pytest.env  conftest.py
tests/controllers/: test_account.py  test_auth.py
tests/dependencies/: test_auth.py
tests/repositories/: test_account.py
tests/services/: test_account.py  test_auth.py
tests/utils/: test_blacklist.py  validator.py
